--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test auth with passport and OAuth2",
   "main": "app.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "auth",
@@ -15,5 +16,15 @@
     "mongoose"
   ],
   "author": "Dr",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15",
+    "rc": "^1.2.8"
+  },
+  "devDependencies": {
+    "ava": "^3.15.0",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
+  }
 }
