--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "test": "ava",
     "dev": "nodemon app.js"
   },
+  "ava": {
+    "files": [
+      "!tests/helpers"
+    ]
+  },
   "keywords": [
     "auth",
     "node",
@@ -18,8 +23,13 @@
   "author": "Dr",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "rc": "^1.2.8"
   },
   "devDependencies": {
